prevent line breaks on multiselect values without clearance button

--- a/src/elements/SelectBox/_selectbox.scss
+++ b/src/elements/SelectBox/_selectbox.scss
@@ -90,6 +90,8 @@ $input-height: $input-text-font-size + 2 * $input-text-padding;
 .Select-value-label {
     .Select--multi & {
         padding-left: 0;
+    }
+    .Select-value-icon + & {
         max-width: calc(100% - 1.5rem);
     }
 }
